crates/eml_cli/tests/snapshots/ui__run@short_circuit.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/short_circuit.em
---
--- stdout ---
False
True
evaluated
False
--- stderr ---
