crates/eml_cli/tests/snapshots/ui__run@tail_calls.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/tail_calls.em
---
--- stdout ---
1000000
7
--- stderr ---
