crates/eml_cli/tests/snapshots/ui__run_fail@division_by_zero.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- runtime error ---\\n{message}\\n\")"
input_file: tests/ui/run-fail/division_by_zero.em
---
--- stdout ---
--- runtime error ---
division by zero in `divide`
