crates/eml_cli/tests/snapshots/ui__run_fail@integer_overflow.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- runtime error ---\\n{message}\\n\")"
input_file: tests/ui/run-fail/integer_overflow.em
---
--- stdout ---
before
--- runtime error ---
integer overflow in `main`
